--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,23 @@ body {
   margin: 0;
   background: #ffffff;
 }
+
+/* width */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  display: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  display: none;
+}
